--- a/projeto1/recipes/templates/recipes/pages/home.html
+++ b/projeto1/recipes/templates/recipes/pages/home.html
@@ -1,16 +1,24 @@
 {% include "recipes/partials/head.html" %}
 
 <body>
-    <header class="main-header-container">
-        <div class="main-header container">
-            <h1>
-                <a class="main-logo" href="/">
-                    <i class="fa-solid fa-kitchen-set"></i>
-                    <span>Receitas</span>
-                </a>
-            </h1>
+    {% include "recipes/partials/header.html" %}
+    {% include "recipes/partials/search.html" %}
+
+    <main class="main-content-container">
+        <div class="main-content main-content-list container">
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://via.placeholder.com/1280x720.png/da525d" alt="Temporário">
+                </div>
+                <div class="recipe-title-container">
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+            </div>
         </div>
-    </header>
+    </main>
+
 </body>
+
 
 </html>
