--- a/projeto1/recipes/templates/recipes/partials/head.html
+++ b/projeto1/recipes/templates/recipes/partials/head.html
@@ -16,6 +16,10 @@
         integrity="sha512-qzgHTQ60z8RJitD5a28/c47in6WlHGuyRvMusdnuWWBB6fZ0DWG/KyfchGSBlLVeqAz+1LzNq+gGZkCSHnSd3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;900&display=swap" rel="stylesheet">
+
     <title>Aprendizado Django</title>
 
     <style>
@@ -76,12 +80,24 @@
         body {
             font-size: 1.6rem;
             font-family: var(--font-primary);
+            background: var(--color-gray-1);
+            color: var(--color-dark-text);
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: var(--font-headings);
         }
 
         .container {
             max-width: 144rem;
-            margin: auto;
-            background-color: var(--color-error-dark);
+            margin: 0 auto;
+            padding: var(--spacing-gutter-medium);
+            /*background-color: red;*/
         }
 
         .main-header-container {
@@ -96,13 +112,94 @@
             flex-flow: row nowrap;
             align-items: center;
             justify-content: center;
-            background-color: red;
             width: fit-content;
+            margin: 0 auto;
         }
 
-        .main-logo-icon {}
+        .main-logo-icon {
+            margin-right: 2rem;
+        }
 
-        .main-logo-text {}
+        .search-form {
+            border: .2rem solid var(--color-primary-dark);
+            max-width: 64rem;
+            margin: 0 auto;
+            /* Deixa as bordas arredondadas*/
+            border-radius: .4rem;
+            position: relative;
+            transition: all 300ms ease-in-out;
+        }
+
+        .search-input,
+        .search-button {
+            border: none;
+            background: none;
+            outline: none;
+            padding: 1rem;
+            transition: all 300ms ease-in-out;
+        }
+
+        .search-input {
+            width: 100%;
+            padding-right: 3rem;
+        }
+
+        .search-button {
+            position: absolute;
+            /* Com valores 0 para top e right, busca-se encostar no elemento pai na parte superior e à direita */
+            top: 0;
+            right: 0;
+        }
+
+        .search-button:focus {
+            outline: 0.1rem solid var(--color-primary);
+            background: rgba(0, 0, 0, .05);
+
+        }
+
+        .search-form:focus-within {
+            border-color: var(--color-primary);
+            background: var(--color-white);
+        }
+
+        .search-form:focus-within .search-button {
+            color: var(--color-primary);
+        }
+
+        .main-content {
+            padding-top: 0;
+            /*background: var(--color-alert-light);*/
+        }
+
+        .main-content-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(34rem, 1fr));
+            gap: var(--spacing-gutter-large);
+        }
+
+        .recipe {
+            background: var(--color-white);
+            box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
+            transform: scale(1);
+            transition: all 300ms ease-in-out;
+        }
+
+        .recipe img {
+            max-width: 100%;
+        }
+
+        .recipe-list-item {
+            max-width: 64rem;
+        }
+
+        .recipe-list-item:hover {
+            transform: scale(1.02);
+            box-shadow: -8px 8px 10px rgba(0, 0, 0, .3);
+        }
+
+        .recipe-title-container {
+            padding: var(--spacing-gutter-medium);
+        }
     </style>
 
 
