--- a/projeto1/recipes/templates/recipes/pages/home.html
+++ b/projeto1/recipes/templates/recipes/pages/home.html
@@ -1,24 +1,14 @@
-{% include "recipes/partials/head.html" %}
+{% extends 'global/base.html' %}
+{% block title %} | Home {% endblock title %}
 
-<body>
-    {% include "recipes/partials/header.html" %}
-    {% include "recipes/partials/search.html" %}
-
-    <main class="main-content-container">
-        <div class="main-content main-content-list container">
-            <div class="recipe recipe-list-item">
-                <div class="recipe-cover">
-                    <img src="https://via.placeholder.com/1280x720.png/da525d" alt="Temporário">
-                </div>
-                <div class="recipe-title-container">
-                    <h2>Lorem ipsum dolor sit amet.</h2>
-                </div>
-
-            </div>
-        </div>
-    </main>
-
-</body>
-
-
-</html>
+{% block content %}
+    <div class="main-content main-content-list container">
+        {% comment %}
+            A variável 'recipes' é capturada do contexto no arquivo views.py.
+            Já a variável 'recipe' contida no laço 'for', pode ser capturada no template recipe.html 
+        {% endcomment %}
+        {% for  recipe in  recipes %}
+            {% include "recipes/partials/recipe.html" %}
+        {% endfor %}
+    </div>
+{% endblock content %}
