--- a/projeto1/recipes/templates/recipes/partials/head.html
+++ b/projeto1/recipes/templates/recipes/partials/head.html
@@ -1,206 +1,21 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+({% load static %})
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css"
-        integrity="sha512-OivR4OdSsE1onDm/i3J3Hpsm5GmOVvr9r49K3jJ0dnsxVzZgaOJ5MfxEAxCyGrzWozL9uJGKz6un3A7L+redIQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css"
-        integrity="sha512-xX2rYBFJSj86W54Fyv1de80DWBq7zYLn2z0I9bIhQG+rxIF6XVJUpdGnsNHWRa6AvP89vtFupEPDP8eZAtu9qA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css"
-        integrity="sha512-qzgHTQ60z8RJitD5a28/c47in6WlHGuyRvMusdnuWWBB6fZ0DWG/KyfchGSBlLVeqAz+1LzNq+gGZkCSHnSd3g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css"
+    integrity="sha512-OivR4OdSsE1onDm/i3J3Hpsm5GmOVvr9r49K3jJ0dnsxVzZgaOJ5MfxEAxCyGrzWozL9uJGKz6un3A7L+redIQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css"
+    integrity="sha512-xX2rYBFJSj86W54Fyv1de80DWBq7zYLn2z0I9bIhQG+rxIF6XVJUpdGnsNHWRa6AvP89vtFupEPDP8eZAtu9qA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css"
+    integrity="sha512-qzgHTQ60z8RJitD5a28/c47in6WlHGuyRvMusdnuWWBB6fZ0DWG/KyfchGSBlLVeqAz+1LzNq+gGZkCSHnSd3g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;900&display=swap" rel="stylesheet">
 
-    <title>Aprendizado Django</title>
-
-    <style>
-        :root {
-            --color-primary: #269fe6;
-            --color-primary-hover: #2086c2;
-            --color-primary-dark: #13141f;
-            --color-primary-dark-hover: #212336;
-            --color-primary-light: #d4ecfa;
-            --color-primary-light-hover: #bdd8e7;
-
-            --color-white: #fff;
-            --color-black: #000;
-
-            --color-dark-text: #444;
-            --color-info-light: #cce5ff;
-            --color-debug-light: #cce5ff;
-            --color-success-light: #d4edda;
-            --color-alert-light: #fff3cd;
-            --color-warning-light: #fff3cd;
-            --color-error-light: #f8d7da;
-
-            --color-info-dark: #4d86c4;
-            --color-debug-dark: #4d86c4;
-            --color-success-dark: #4a9c5d;
-            --color-alert-dark: #927f40;
-            --color-warning-dark: #927f40;
-            --color-error-dark: #da525d;
-
-            --color-gray-0: #f9f9f9;
-            --color-gray-1: #e0e0e0;
-            --color-gray-2: #c7c7c7;
-            --color-gray-3: #aeaeae;
-            --color-gray-4: #959595;
-            --color-gray-5: #7d7d7d;
-            --color-gray-6: #646464;
-            --color-gray-7: #4b4b4b;
-            --color-gray-8: #323232;
-            --color-gray-9: #191919;
-
-            --font-primary: sans-serif;
-            --font-headings: 'Roboto Slab', serif;
-
-            --spacing-gutter-medium: 3rem;
-            --spacing-gutter-large: 4rem;
-        }
-
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: "border-box";
-        }
-
-        html {
-            font-size: 62.5%;
-        }
-
-        body {
-            font-size: 1.6rem;
-            font-family: var(--font-primary);
-            background: var(--color-gray-1);
-            color: var(--color-dark-text);
-        }
-
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            font-family: var(--font-headings);
-        }
-
-        .container {
-            max-width: 144rem;
-            margin: 0 auto;
-            padding: var(--spacing-gutter-medium);
-            /*background-color: red;*/
-        }
-
-        .main-header-container {
-            background-color: var(--color-primary-dark);
-        }
-
-        .main-logo {
-            font-size: 4rem;
-            color: var(--color-white);
-            text-decoration: none;
-            display: flex;
-            flex-flow: row nowrap;
-            align-items: center;
-            justify-content: center;
-            width: fit-content;
-            margin: 0 auto;
-        }
-
-        .main-logo-icon {
-            margin-right: 2rem;
-        }
-
-        .search-form {
-            border: .2rem solid var(--color-primary-dark);
-            max-width: 64rem;
-            margin: 0 auto;
-            /* Deixa as bordas arredondadas*/
-            border-radius: .4rem;
-            position: relative;
-            transition: all 300ms ease-in-out;
-        }
-
-        .search-input,
-        .search-button {
-            border: none;
-            background: none;
-            outline: none;
-            padding: 1rem;
-            transition: all 300ms ease-in-out;
-        }
-
-        .search-input {
-            width: 100%;
-            padding-right: 3rem;
-        }
-
-        .search-button {
-            position: absolute;
-            /* Com valores 0 para top e right, busca-se encostar no elemento pai na parte superior e à direita */
-            top: 0;
-            right: 0;
-        }
-
-        .search-button:focus {
-            outline: 0.1rem solid var(--color-primary);
-            background: rgba(0, 0, 0, .05);
-
-        }
-
-        .search-form:focus-within {
-            border-color: var(--color-primary);
-            background: var(--color-white);
-        }
-
-        .search-form:focus-within .search-button {
-            color: var(--color-primary);
-        }
-
-        .main-content {
-            padding-top: 0;
-            /*background: var(--color-alert-light);*/
-        }
-
-        .main-content-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(34rem, 1fr));
-            gap: var(--spacing-gutter-large);
-        }
-
-        .recipe {
-            background: var(--color-white);
-            box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
-            transform: scale(1);
-            transition: all 300ms ease-in-out;
-        }
-
-        .recipe img {
-            max-width: 100%;
-        }
-
-        .recipe-list-item {
-            max-width: 64rem;
-        }
-
-        .recipe-list-item:hover {
-            transform: scale(1.02);
-            box-shadow: -8px 8px 10px rgba(0, 0, 0, .3);
-        }
-
-        .recipe-title-container {
-            padding: var(--spacing-gutter-medium);
-        }
-    </style>
-
-
-</head>
+<link rel="stylesheet" href="{% static '/recipes/css/styles.css' %}">
