--- a/projeto1/recipes/templates/recipes/partials/recipe.html
+++ b/projeto1/recipes/templates/recipes/partials/recipe.html
@@ -13,7 +13,11 @@
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+            {% if  recipe.user.first_name%}
+                {{ recipe.user.first_name }} {{ recipe.user.last_name }}
+            {% else %}
+                {{ recipe.user.username }}
+            {% endif %}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
@@ -24,10 +28,12 @@
             {{ recipe.created_at|date:"SHORT_DATE_FORMAT" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
         <span class="recipe-author-item">
-            <a href="/recipes/category/cafe-da-manha/">
-                <i class="fas fa-layer-group"></i>
-                <span>{{ recipe.category.name }} </span>
-            </a>
+            {% if  recipe.category is not None %}
+                <a href="{%url 'recipes:category' recipe.category.id %}">
+                    <i class="fas fa-layer-group"></i>
+                    <span>{{ recipe.category.name }} </span>
+                </a>
+            {% endif %}
         </span>
     </div>
 
