--- a/projeto1/recipes/static/recipes/css/styles.css
+++ b/projeto1/recipes/static/recipes/css/styles.css
@@ -276,3 +276,33 @@ h6 {
 .preparation-steps {
     padding: var(--spacing-gutter-medium);
 }
+
+.preparation-steps h1,
+.preparation-steps h2,
+.preparation-steps h3,
+.preparation-steps h4,
+.preparation-steps h5,
+.preparation-steps h6,
+.preparation-steps p {
+    margin: 2rem 0;
+}
+
+.preparation-steps ol,
+.preparation-steps ul,
+.preparation-steps pre {
+    margin: 2rem;
+    padding: 0 2rem;
+}
+
+/* Generics. Tentar aprender também bootstrap */
+.center {
+    text-align: center;
+}
+
+.m-x {
+    margin: 0 var(--spacing-gutter-medium);
+}
+
+.m-y {
+    margin: 0 var(--spacing-gutter-medium) 0 ;
+}
